--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-switch": "^1.2.6",
+    "@tanstack/react-query": "^5.28.0",
     "@types/file-saver": "^2.0.7",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
@@ -45,6 +46,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "vite-plugin-pwa": "^0.17.4"
   }
 }
